Add another fix to waiting for stub

--- a/.github/workflows/specmatic-graphql-stub-smoke.yml
+++ b/.github/workflows/specmatic-graphql-stub-smoke.yml
@@ -20,13 +20,17 @@ jobs:
             -p 9000:9000 \
             specmatic/specmatic-graphql virtualize /sandbox/product-api.graphql
 
-      - name: Wait for stub (POST /graphql)
+      - name: Wait for stub (POST /graphql - real query)
         run: |
-          for i in {1..30}; do
+          cat > healthcheck.json << 'EOF'
+          {"query":"query { findAvailableProducts(type: gadget, pageSize: 10) { id } }"}
+          EOF
+
+          for i in {1..45}; do
             code=$(curl -s -o /dev/null -w "%{http_code}" \
-              -X POST http://localhost:9000/graphql \
-              -H "Content-Type: application/json" \
-              --data-raw '{"query":"query { __typename }"}' || true)
+               -X POST "http://localhost:9000/graphql" \
+               -H "Content-Type: application/json" \
+               --data-binary @healthcheck.json || true)
 
             if [ "$code" = "200" ]; then
               echo "Stub is up"
@@ -36,10 +40,10 @@ jobs:
             echo "Waiting stub... (HTTP $code)"
             sleep 1
           done
+
           echo "Stub did not start in time"
           docker logs specmatic-graphql-stub || true
           exit 1
-
 
       - name: Smoke - findAvailableProducts
         run: |
